--- a/index.html
+++ b/index.html
@@ -6,33 +6,10 @@
   <title>QR Code</title>
   <script src="https://unpkg.com/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
-    body {
-      background: black;
-      color: #FFFF00;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-      margin: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .qr-wrapper {
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
-      margin: 20px 0;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.6);
-    }
-    #code {
-      font-size: 2em;
-      font-weight: bold;
-      margin: 30px 0;
-      word-break: break-all;
-    }
-    
+    body { background: black; color: #FFFF00; font-family: Arial; text-align: center; padding: 40px; margin: 0; position: relative; }
+    .qr-wrapper { background: white; padding: 40px; display: inline-block; border-radius: 20px; margin: 30px 0; }
+    #code { font-size: 2em; font-weight: bold; margin: 30px 0; }
+   
     #overlay {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -50,6 +27,9 @@
       text-align: center;
       padding: 20px;
     }
+    @media (max-width: 600px) {
+      #overlay-text { font-size: 2em; }
+    }
     #instruction {
       font-size: 2.2em;
       font-weight: bold;
@@ -59,10 +39,7 @@
       color: #FF0000;
     }
     @media (max-width: 600px) {
-      #overlay-text { font-size: 2em; }
       #instruction { font-size: 1.8em; }
-      #code { font-size: 1.6em; }
-      .qr-wrapper { padding: 30px; }
     }
   </style>
 </head>
@@ -70,18 +47,16 @@
   <div id="overlay">
     <div id="overlay-text">Click anywhere to download<br>and reveal your QR code!</div>
   </div>
-
   <div id="instruction">
     NOW POINT SCREEN UP TO <span class="red">RED</span> TARGET!
   </div>
-
   <div class="qr-wrapper" id="qrContainer"></div>
   <div id="code"></div>
 
   <script>
-    // Generate 12-character UPPERCASE nonce
+    // Generate 12-character nonce (shortest safe length — bulletproof)
     function generateNonce() {
-      const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+      const chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
       let result = '';
       for (let i = 0; i < 12; i++) {
         result += chars.charAt(Math.floor(Math.random() * chars.length));
@@ -118,13 +93,12 @@
     const sessionId = urlParams.get('session_id');
     const amountStr = urlParams.get('amount');
 
-    // Cleaner dummy URL (more realistic)
     if (sessionId || amountStr) {
       const cleanUrl = window.location.pathname +
-        "?status=complete" +
-        "&ref=" + Math.random().toString(36).substring(2, 12) +
-        "&order=" + Math.floor(Math.random() * 1000000) +
-        "&txn=" + Date.now();
+        "?status=success" +
+        "&ref=" + Math.random().toString(36).substring(2, 10) +
+        "&payment_id=" + Date.now() + Math.floor(Math.random() * 10000) +
+        "&token=" + Math.random().toString(36).substring(2, 8);
       window.history.replaceState({}, document.title, cleanUrl);
     }
 
@@ -139,8 +113,15 @@
     const savedCode = localStorage.getItem('trac_qr_code');
     const lastCode = localStorage.getItem('last_qr_code');
 
-    // Only one extra back press (2 total to leave)
+    function enableExitWarning() {
+      window.addEventListener('beforeunload', function(e) {
+        e.preventDefault();
+        e.returnValue = true;
+      });
+    }
+
     function addBackProtection() {
+      history.pushState({protected: true}, '', window.location.href);
       history.pushState({protected: true}, '', window.location.href);
     }
 
@@ -160,11 +141,12 @@
         downloadAndReveal(code);
       });
 
+      enableExitWarning();
       addBackProtection();
     }
 
     if (isValidSession && isValidAmount && plays > 0) {
-      const nonce = generateNonce();
+      const nonce = generateNonce(); // 12 chars — short & safe
       const payload = `${plays}|${machineId}|${nonce}`;
       const code = payload;
 
