--- a/payment.html
+++ b/payment.html
@@ -25,9 +25,9 @@
   </style>
 </head>
 <body>
-  <h1>Pay Point Play</h1>
+  <h1>Pay! Point! Play!</h1>
   <h2>Select Your Plays</h2>
-  <div id="machine-info">You Have Chosen Machine: <span id="machine-id">Loading...</span></div>
+  <div id="machine-info">You Have Selected Machine: <span id="machine-id">Loading...</span></div>
 
   <div id="no-machine" style="display:none;">Scan the QR Code to Play!</div>
 
