--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 </head>
 <body>
   <div id="overlay">
-    <div id="overlay-text">CLICK ANYWHERE TO DOWNLOAD<br>and reveal your QR code!</div>
+    <div id="overlay-text">CLICK ANYWHERE TO<br>DOWNLOAD AND REVEAL<br>YOUR QR CODE!</div>
   </div>
 
   <div id="instruction">
-    HOLD SCREEN UP TO <span class="red">RED</span> TARGET!
+    HOLD SCREEN UP<br>TO <span class="red">RED</span> TARGET!
   </div>
 
   <div class="container">
