--- a/payment.html
+++ b/payment.html
@@ -25,14 +25,14 @@
   </style>
 </head>
 <body>
-  <h1>PAY!POINT!PLAY!</h1>
-  <h2>Select Your Plays</h2>
+  <h1>PAY! POINT! PLAY!</h1>
+  <h2>SELECT YOUR PLAY(S)</h2>
   <div id="machine-info">YOU HAVE SELECTED MACHINE: <span id="machine-id">Loading...</span></div>
 
-  <div id="no-machine" style="display:none;">Scan the QR Code to Play!</div>
+  <div id="no-machine" style="display:none;">SCAN QR CODE TO PLAY!</div>
 
   <div class="buttons">
-    <a id="btn1" class="buy-btn" href="https://buy.stripe.com/test_9B63cn7i6b8vbwh7QefMA01">Buy 1 Play ($1.39)</a>
+    <a id="btn1" class="buy-btn" href="https://buy.stripe.com/test_9B63cn7i6b8vbwh7QefMA01">BUY 1 PLAY ($1.39)</a>
     <a id="btn3" class="buy-btn" href="https://buy.stripe.com/test_14A8wH6e2a4r9o92vUfMA03">Buy 3 Plays ($3.39)</a>
     <a id="btn5" class="buy-btn" href="https://buy.stripe.com/test_6oUeV5aui1xV0RD1rQfMA00">Buy 5 Plays ($5.39)</a>
     <a id="btn10" class="buy-btn" href="https://buy.stripe.com/test_28EbITbym0tR2ZL7QefMA04">Buy 10 Plays ($10.39)</a>
