--- a/payment.html
+++ b/payment.html
@@ -25,9 +25,9 @@
   </style>
 </head>
 <body>
-  <h1>PAY! POINT! PLAY!</h1>
+  <h1>PAY!POINT!PLAY!</h1>
   <h2>SELECT YOUR PLAY(S)</h2>
-  <div id="machine-info">YOU HAVE SELECTED MACHINE: <span id="machine-id">Loading...</span></div>
+  <div id="machine-info">ON WORK ON MACHINE: <span id="machine-id">Loading...</span></div>
 
   <div id="no-machine" style="display:none;">SCAN QR CODE TO PLAY!</div>
 
