--- a/payment.html
+++ b/payment.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <h1>PAY!POINT!PLAY!</h1>
-  <h2>SELECT YOUR PLAY(S)</h2>
-  <div id="machine-info">ON WORK ON MACHINE: <span id="machine-id">Loading...</span></div>
+  <h2>SELECT YOUR PLAY(S)<br>(+$0.39 MOBILE PROCESSING FEE)</h2>
+  <div id="machine-info">ONLY FOR MACHINE: <span id="machine-id">Loading...</span></div>
 
   <div id="no-machine" style="display:none;">SCAN QR CODE TO PLAY!</div>
 
