--- a/index.html
+++ b/index.html
@@ -6,71 +6,73 @@
   <title>Success | Pay-Point-Play</title>
   <script src="https://unpkg.com/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
-    body { background: black; color: #FFFF00; font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-    #overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.9); backdrop-filter: blur(10px); display: flex; align-items: center; justify-content: center; z-index: 100; }
-    #overlay-text { font-size: 1.8em; font-weight: bold; }
-    .spinner { border: 4px solid #333; border-top: 4px solid #FFFF00; border-radius: 50%; width: 30px; height: 30px; animation: spin 1s linear infinite; margin: 10px auto; }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    .qr-wrapper { background: white; padding: 20px; display: inline-block; border-radius: 15px; margin: 20px 0; }
-    #downloadAgainBtn { background: #FFFF00; color: black; border: none; padding: 15px 30px; font-size: 1.2em; font-weight: bold; border-radius: 10px; cursor: pointer; display: none; margin: 20px auto; }
-    #instruction { font-size: 1.5em; font-weight: bold; }
+    body { background: black; color: #FFFF00; font-family: Arial, sans-serif; text-align: center; padding: 40px; margin: 0; }
+    #overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.85); backdrop-filter: blur(12px); display: flex; align-items: center; justify-content: center; z-index: 100; }
+    #overlay-text { font-size: 2em; font-weight: bold; }
+    #instruction { font-size: 2em; font-weight: bold; margin-bottom: 20px; }
     .red { color: #FF0000; }
+    .qr-wrapper { background: white; padding: 30px; display: inline-block; border-radius: 20px; margin: 20px 0; }
+    #code { font-size: 1.8em; font-weight: bold; margin-top: 20px; letter-spacing: 2px; }
   </style>
 </head>
 <body>
 
   <div id="overlay">
-    <div id="overlay-text"><div class="spinner"></div>GENERATING YOUR SECURE CODE...</div>
+    <div id="overlay-text">VERIFYING PAYMENT...</div>
   </div>
 
   <div id="instruction">POINT SCREEN TO <span class="red">RED</span> TARGET!</div>
   <div class="qr-wrapper" id="qrContainer"></div>
-  <div id="codeDisplay" style="font-size: 1.5em; font-weight: bold; margin: 10px 0;"></div>
-  
-  <button id="downloadAgainBtn">Download QR to Phone</button>
+  <div id="code">Searching...</div>
 
   <script>
-    const APPS_SCRIPT_URL = "YOUR_NEW_DEPLOYMENT_URL"; 
+    // 1. PASTE YOUR URL HERE
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxwI-ShJVLFrlguYJzS-iKTUNTzxfz6XXPndZ49igqfwd7n_Kmo9xfcOI4Afi0gV1IE/exec"; 
 
     const urlParams = new URLSearchParams(window.location.search);
     let sessionId = urlParams.get('session_id');
 
-    // "LOST QR" LOGIC: If no ID in URL, check LocalStorage
-    if (!sessionId) {
-        sessionId = localStorage.getItem('last_ppp_session');
+    // Handle LocalStorage for "Lost QR" button
+    if (sessionId) {
+      localStorage.setItem('ppp_last_session', sessionId);
     } else {
-        localStorage.setItem('last_ppp_session', sessionId);
+      sessionId = localStorage.getItem('ppp_last_session');
     }
 
     async function startFlow() {
       if (!sessionId) {
-        document.getElementById('overlay-text').innerHTML = "NO RECENT PURCHASE FOUND.<br>Please pay first!";
+        document.getElementById('code').textContent = "No recent purchase found.";
+        document.getElementById('overlay-text').textContent = "PLEASE PAY FIRST";
         return;
       }
 
       try {
-        const response = await fetch(`${APPS_SCRIPT_URL}?session_id=${sessionId}`, { redirect: 'follow' });
+        const response = await fetch(`${APPS_SCRIPT_URL}?session_id=${sessionId}`, {
+          method: 'GET',
+          redirect: 'follow'
+        });
         const data = await response.json();
 
         if (data.qr_code) {
-          document.getElementById('codeDisplay').textContent = data.qr_code;
-          new QRCode(document.getElementById("qrContainer"), { text: data.qr_code, width: 250, height: 250 });
+          document.getElementById('code').textContent = data.qr_code;
+          new QRCode(document.getElementById("qrContainer"), {
+            text: data.qr_code,
+            width: 280,
+            height: 280,
+            correctLevel: QRCode.CorrectLevel.H
+          });
 
-          // SHOW THE BUTTON (In case auto-download fails)
-          document.getElementById('downloadAgainBtn').style.display = 'block';
-          document.getElementById('downloadAgainBtn').onclick = () => triggerDownload(data.qr_code, data.plays);
-
-          // AUTO-REVEAL & DOWNLOAD
+          // Wait 1.5s then Auto-Download and Remove Overlay
           setTimeout(() => {
             triggerDownload(data.qr_code, data.plays);
             document.getElementById('overlay').remove();
           }, 1500);
 
         } else {
-          document.getElementById('overlay-text').textContent = "PAYMENT STILL PROCESSING... REFRESH IN 10 SECONDS.";
+          document.getElementById('overlay-text').textContent = "NOT FOUND. REFRESH IN 5 SECONDS.";
         }
       } catch (err) {
-        document.getElementById('overlay-text').textContent = "CONNECTION ERROR.";
+        document.getElementById('overlay-text').textContent = "CONNECTION ERROR. REFRESH PAGE.";
       }
     }
 
@@ -78,18 +80,18 @@
       const canvas = document.createElement('canvas');
       canvas.width = 440; canvas.height = 520;
       const ctx = canvas.getContext('2d');
-      ctx.fillStyle = 'white'; ctx.fillRect(0,0,440,520);
+      ctx.fillStyle = 'white'; ctx.fillRect(0, 0, 440, 520);
       const qrCanvas = document.querySelector('#qrContainer canvas');
       if (qrCanvas) ctx.drawImage(qrCanvas, 40, 40, 360, 360);
-      ctx.fillStyle = 'black'; ctx.font = 'bold 28px Arial'; ctx.textAlign = 'center';
+      ctx.fillStyle = 'black'; ctx.font = 'bold 30px Arial'; ctx.textAlign = 'center';
       ctx.fillText(text, 220, 460);
       
       const url = canvas.toDataURL('image/png');
       const a = document.createElement('a');
       a.href = url;
-      // Add 4-digit random suffix
-      const suffix = Math.floor(1000 + Math.random() * 9000);
-      a.download = `PayPointPlay-${plays}Plays-${suffix}.png`;
+      // Add random 4 digit suffix for unique filename
+      const randomSuffix = Math.floor(1000 + Math.random() * 9000);
+      a.download = `PayPointPlay-${plays}Plays-${randomSuffix}.png`;
       a.click();
     }
 
